crates/cribo/tests/snapshots/bundled_code@ast_rewriting_variable_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/ast_rewriting_variable_name_collision/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""\nConstants module with global variables.\nThese will conflict with config.py when bundled.\n"""
API_URL = "https://api.constants.com"
VERSION = "1.0.0"
DEFAULT_TIMEOUT = 30
MAX_CONNECTIONS = 100
RETRY_DELAY = 5
"""\nConfig module with global variables.\nThese will conflict with constants.py when bundled.\n"""
API_URL_1 = "https://api.config.com"
VERSION_1 = "2.1.0"
MAX_RETRIES = 3
CACHE_SIZE = 1000
"""\nVariable name collision test.\nBoth modules define variables with the same names.\n"""
CONFIG_API_URL = API_URL_1
CONFIG_VERSION = VERSION_1
def main():
    print(f"Constants API URL: {API_URL}")
    print(f"Config API URL: {CONFIG_API_URL}")
    print(f"Constants Version: {VERSION}")
    print(f"Config Version: {CONFIG_VERSION}")
    print(f"Default Timeout: {DEFAULT_TIMEOUT}")
    print(f"Max Retries: {MAX_RETRIES}")
    return {"constants_api_url": API_URL, "config_api_url": CONFIG_API_URL, "constants_version": VERSION, "config_version": CONFIG_VERSION, "default_timeout": DEFAULT_TIMEOUT, "max_retries": MAX_RETRIES}
if __name__ == "__main__":
    result = main()
    print("Result:", result)
