crates/cribo/tests/snapshots/bundled_code@late_future_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/late_future_imports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

from __future__ import annotations

# ─ Entry Module: main ─
"""Test late future imports - these should trigger F404 rule"""
from pathlib import Path
def main():
    """Main function with future annotations"""
    name: str = "test"
    print(f"Hello {name}")
    print(f"from: {Path(__file__).name}")
if __name__ == "__main__":
    main()
