crates/cribo/tests/snapshots/bundled_code@namespace_simple_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/namespace_simple_test/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
CONSTANT_mymodule_utils = 42
def greet_mymodule_utils(name: str) -> str:
	"""Greet someone"""
	return f'Hello, {name}!'
"""Test namespace imports with simple module"""
utils = types.SimpleNamespace()
utils.CONSTANT = CONSTANT_mymodule_utils
utils.greet = greet_mymodule_utils
print(utils.greet("World"))
print(f"Constant: {utils.CONSTANT}")
