crates/cribo/tests/snapshots/bundled_code@pyfail_relative_import_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/pyfail_relative_import_cycles/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
def authenticate_user_services_auth(username):
    """Authenticate user using database connection"""
    conn = get_connection()
    return f'auth({username}, conn={conn})'
def get_user_context_services_auth():
    """Get user context - used by database module"""
    return "user_context_from_auth"
def get_connection():
    """Get database connection with user context"""
    context = get_user_context_services_auth()
    return f"db_connection(context={context})"
def execute_query(query):
    """Execute a database query"""
    return f"query_result({query})"
auth = types.SimpleNamespace()
auth.authenticate_user = authenticate_user_services_auth
auth.get_user_context = get_user_context_services_auth
def main():
    result = auth.authenticate_user("test_user")
    print(f"Relative import cycle result: {result}")
if __name__ == "__main__":
    main()
